Addig dummy data for xelex and zsolt and making player's pages

--- a/frontend/src/pages/Players.css
+++ b/frontend/src/pages/Players.css
@@ -1,6 +1,6 @@
 /* General Styling for the Players Page */
 .players-page {
-    background-color: #121212;
+    background-color: hsl(0, 0%, 7%);
     min-height: 100vh;
     display: flex;
     flex-direction: column;
