Fixing dummy IDs

--- a/frontend/src/components/PlayerList.css
+++ b/frontend/src/components/PlayerList.css
@@ -3,7 +3,7 @@
     background-color: #1c1c1c !important;
     text-align: center;
     margin: 20px;
-    
+    padding: auto;
 }
 
 .player-list h1 {
