--- a/frontend/src/components/PlayerList.css
+++ b/frontend/src/components/PlayerList.css
@@ -3,7 +3,7 @@
     text-align: center;
     margin: 20px;
     padding: auto;
-    background-color: #343a40;
+    background-color: #1c1c1c;
     border-radius: 10px;
     box-shadow: 0 0 7px black;
     border: 1px solid black;
@@ -25,20 +25,18 @@
 }
 
 .player-link {
-    font-size: 1.5rem;
-    text-decoration: none;
-    color: #ffffff;
-    background-color: #282c34;
-    padding: 10px 20px;
+    margin: 5px;
+    padding: 5px 10px;
+    background-color: #eee;
     border-radius: 5px;
-    transition: transform 0.3s ease, background-color 0.3s ease;
-}
-
-.player-link a{
-    padding-left: auto;
+    font-size: 0.9rem;
+    color: #212529;
+    border: 3px solid ;
+    box-shadow: 0 0 7px black;
+    border: 2px solid black;
 }
 
 .player-link:hover {
-    background-color: #17a2b8;
     transform: scale(1.1);
+    transition: transform 0.3s ease-in-out;
 }
