--- a/frontend/src/components/TeamList.css
+++ b/frontend/src/components/TeamList.css
@@ -4,33 +4,43 @@
 }
 
 .team-button {
-  width: 50%;
-  padding: 15px;
-  font-size: 1.5rem;
+  width: 40%; /* Kisebb szélesség */
+  padding: 10px; /* Kisebb padding */
+  font-size: 1.2rem; /* Kisebb betűméret */
   font-weight: bold;
   text-align: left;
-  background-color: #282c34;
+  background-color: #343a40;
   color: #ffffff;
-  border: none;
+  border: 2px solid black; /* Szegély hozzáadása */
   border-radius: 5px;
   cursor: pointer;
-  transition: background-color 0.3s;
+  transition: background-color 0.3s, transform 0.2s; /* Transzformáció hozzáadása */
+  margin: 10px 0 10px 20px; /* Fent, alul és balra távolság */
 }
+
+.team-button:hover {
+  background-color: #17a2b8; /* Háttérszín változás hover állapotban */
+  transform: translateY(-2px); /* Enyhén felemeli a gombot hover állapotban */
+}
+
 
 .team-button:hover {
   background-color: #17a2b8;
 }
-
 .players-dropdown {
   display: flex;
   flex-wrap: wrap; /* Allows wrapping to multiple rows */
   gap: 10px; /* Space between items */
   list-style: none;
   padding: 15px 20px;
-  background-color: #1c1c1c;
+  background-color: #1c1c1c; /* Eredeti háttérszín */
   border-radius: 5px;
   margin-top: 10px;
   justify-content: center; /* Centers the items in the dropdown */
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Enyhe árnyék */
+  border: 2px solid black;
+  box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
 }
 
 .player-item {
