--- a/frontend/src/pages/Players.css
+++ b/frontend/src/pages/Players.css
@@ -24,10 +24,7 @@
     margin-bottom: 10px;
 }
 
-.players-header p {
-    font-size: 1.2rem;
-    color: #cccccc;
-}
+
 
 /* Enhancing the PlayerList Styling */
 .player-list {
@@ -55,17 +52,17 @@
     text-align: center;
     font-size: 1.5rem;
     text-decoration: none;
-    color: #ffffff;
-    background-color: #282c34;
+    color: #ec1414;
+    background-color: #343a40;
     padding: 15px 20px;
     border-radius: 10px;
     transition: transform 0.3s ease, background-color 0.3s ease, box-shadow 0.3s ease;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 7px black;
+    border: 2px solid black;
 }
 
-/* Add a Fun Hover Effect */
 .player-link:hover {
-    background-color: #17a2b8;
     transform: scale(1.05);
     box-shadow: 0 6px 15px rgba(23, 162, 184, 0.7);
 }
