--- a/frontend/src/pages/Teams.css
+++ b/frontend/src/pages/Teams.css
@@ -21,11 +21,20 @@
   display: flex;
   flex-direction: column;
   padding-top: 40px;
-  background-color: #101010;
+  background-color: #212529;
   color: white;
   min-height: 100vh;
 }
 
 .teams-list {
   width: 100%;
+}
+h1 {
+  font-size: 2.5rem; /* Nagyobb betűméret */
+  font-weight: bold; /* Félkövér szöveg */
+  color: #17a2b8; /* Szín beállítása, amely illik a gombhoz */
+  text-align: left; /* Balra igazítás */
+  margin: 20px 0; /* Fent és lent margó */
+  margin-left: 20px; /* A bal oldalról való távolság */
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2); /* Szövegéles árnyék */
 }
