--- a/frontend/src/pages/Players.css
+++ b/frontend/src/pages/Players.css
@@ -52,7 +52,7 @@
     text-align: center;
     font-size: 1.5rem;
     text-decoration: none;
-    color: #ec1414;
+    color: white;
     background-color: #343a40;
     padding: 15px 20px;
     border-radius: 10px;
