--- a/frontend/src/components/TeamList.css
+++ b/frontend/src/components/TeamList.css
@@ -2,20 +2,22 @@
   margin-bottom: 20px;
   width: 100%;
 }
-
+.team-header {
+  display: flex;
+  align-items: center;
+}
 .team-button {
-  width: 40%; 
+  width: 25%; 
   padding: 10px; 
   font-size: 1.2rem; 
   font-weight: bold;
-  text-align: left;
   background-color: #343a40;
   color: #ffffff;
   border: 2px solid black; 
   border-radius: 5px;
   cursor: pointer;
+  margin: 10px 0;
   transition: background-color 0.3s, transform 0.2s; 
-  margin: 10px 0 10px 20px; 
 }
 
 .team-button:hover {
@@ -80,12 +82,11 @@
   border: 2px solid #17a2b8;
 }
 
-/* Scrolling Events Container */
 .scrolling-events-container {
   overflow: hidden;
   white-space: nowrap;
-  width: 50%;
-  margin-left: 20px;
+  width: 75%; 
+  margin-left: 15px; 
 }
 
 .scrolling-events {
@@ -95,14 +96,12 @@
 
 .scrolling-event-text {
   display: inline-block;
-  padding: 0 40px; /* Consistent padding to prevent overlap */
-  min-width: 150px; /* Ensures uniform width */
+  padding: 0 40px;
   color: #17a2b8;
   font-size: 1rem;
   text-align: center;
 }
 
-/* Keyframes for scrolling effect */
 @keyframes scroll-left {
   0% {
     transform: translateX(100%);
