--- a/frontend/src/components/HeroSection.css
+++ b/frontend/src/components/HeroSection.css
@@ -1,7 +1,7 @@
 .hero-section {
     height: 90vh;
     max-width: 100vw;
-    background: #143353 url('C:\Users\farag\Desktop\Szoftverfejlesztes-mernokoknek\frontend\public\HeroPicture.png') center center no-repeat;
+    background: #143353 url('..\\\\public\\\\HeroPicture.png') center center no-repeat;
     background-size: cover;
     display: flex;
     align-items: flex-end; /* Aligns content to the bottom */
