Hot swap bug fixed, PlayerDetails page overlay position fixed,  default player image uploaded

--- a/frontend/src/pages/Players/PlayerDetails/PlayerDetails.css
+++ b/frontend/src/pages/Players/PlayerDetails/PlayerDetails.css
@@ -1,11 +1,9 @@
 .player-detail {
-  max-width: 800px;
   margin: auto;
-  padding: 20px;
   background-color: #1c1c1c;
   color: white;
   min-height: 100vh;
-  min-width: 100vw;
+  min-width: 100%;
 }
 
 .player-header {
