--- a/frontend/src/pages/Profile/Profile.css
+++ b/frontend/src/pages/Profile/Profile.css
@@ -195,3 +195,11 @@ body {
     }
 }
 
+.profile-image img{
+    width: 60%;
+    height: 60%;
+    border-radius: 50%;
+    margin: 0 auto;
+    display: block;
+    margin-bottom: 1rem;
+}
